--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@ plugins {
     id 'java'
 }
 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 group 'com.aizperm'
 version '1.0-SNAPSHOT'
 
